--- a/smart-calendar/src/app/shared/components/sidebar/sidebar.scss
+++ b/smart-calendar/src/app/shared/components/sidebar/sidebar.scss
@@ -3,14 +3,14 @@
 
 .sidebar {
   width: 280px;
-  background: linear-gradient(135deg, #300b6ba9 0%, #1c01368c 100%);
-  box-shadow: $shadow;
+  border-radius: vars.$border-radius-md;
+  background: vars.$primary-dark;  box-shadow: $shadow;
   color: white;
   @include flex-column;
   transition: all 0.3s ease;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
-  border-right: 1px solid rgba(255,255,255,0.1);
+  border-right: 2px solid vars.$accent-border;
   height: 100vh;
   position: fixed;
   top: 0;
