--- a/smart-calendar/src/app/features/categories/components/categories-list.component.html
+++ b/smart-calendar/src/app/features/categories/components/categories-list.component.html
@@ -26,7 +26,7 @@
         </ng-container>
         <ng-container matColumnDef="createdAt">
           <th mat-header-cell *matHeaderCellDef>Criada em</th>
-          <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'dd/MM/yyyy' }}</td>
+          <td mat-cell *matCellDef="let row">{{ formatDate(row.createdAt) }}</td>
         </ng-container>
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Ações</th>
